WIP add sonarqube plugin